chore: Set page front matter vars to generic vals

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-leap-day
 title: 100 Days of Code Log
-description: by James Priest
+description: by [Your Name]
 #google_analytics: UA-121627234-4
 
 exclude: [
