r6d13: Data Structures - Queue

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,21 @@
 {
   "cSpell.words": [
     "Abramov's",
+    "CDNs",
+    "Grider",
     "Kallaway's",
+    "Mstack",
+    "SSGs",
+    "Snipcart",
     "Todos",
     "Udaci",
+    "architecting",
     "authed",
     "daysofcode",
-    "middlewares"
+    "middlewares",
+    "prerendered",
+    "vickys",
+    "webservers",
+    "whiteboarded"
   ]
 }
