r6d27: Add Redux Boilerplate

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,16 +2,23 @@
   "cSpell.words": [
     "Abramov's",
     "CDNs",
+    "Coyier",
+    "Firestore",
+    "Fizzbuzz",
+    "Glassdoor",
     "Grider",
     "Kallaway's",
     "Mstack",
+    "Neagoie",
     "SSGs",
     "Snipcart",
     "Todos",
     "Udaci",
+    "Zhang",
     "architecting",
     "authed",
     "daysofcode",
+    "devs",
     "middlewares",
     "prerendered",
     "vickys",
